--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/nprogress": "^8.3.8",
     "@mantine/spotlight": "^8.3.8",
     "@mantine/tiptap": "^8.3.8",
+    "@tabler/icons-react": "^3.35.0",
     "@tiptap/extension-link": "^3.11.0",
     "@tiptap/pm": "^3.11.0",
     "@tiptap/react": "^3.11.0",
